# event-finder-api

./: .dockerignore  .flake8  Dockerfile.job  README.md  docker-compose.yaml  dockerfile  local-startup.sh  pyproject.toml  startup.sh  supervisord.conf  test-job-local.sh
api/: main.py
api/routers/v1/: external.py  internal.py  router.py  v1_router.py
api/routers/v1/endpoints/: check_event.py  get_address_details.py  get_event_links.py  get_search_keywords.py  search.py
api/routers/v1/internal/: internal.py
api/routers/v1/internal/endpoints/: __init__.py  check_event.py  get_address_details.py  get_event_links.py  get_search_keywords.py  send_email.py
api/routers/v1/internal/models/: __init__.py  get_address_details.py  get_event_links.py  (+3 more)
api/routers/v1/models/: common.py  get_address_details.py
app/: celery_app.py  tasks.py
core/: browser_config.py  config.py  cors_middleware.py  llm.py  redis_client.py  scrappey.py  supabase_client.py  upstash_connection_link.py
jobs/: __init__.py  agent_job.py
models/: bias_options.py  event_model.py  user_profile_model.py
schemas/: coordinates_model.py  event_model.py  user_profile_model.py
services/: cloud_run_jobs.py
services/agent/: agent.py
services/auth/: supabase_auth.py
services/email/: send_email.py
services/event_processing/: __init__.py  check_event.py  event_disqualifier.py  event_relevance_calculator.py  extract_event_details.py
services/runs/: user_runs_service.py
services/scrapping/: __init__.py  browser_pool.py  scrap_web_page.py  scrappers.py
services/search_words/: __init__.py  get_search_words_for_event_sites.py
utils/: address_utils.py  age_utils.py  date_utils.py  email_utils.py  event_utils.py  request_utils.py  user_profile_utils.py
(+6 files in other folders)
